ensure image has spacing on other pages

--- a/express/code/blocks/quotes/quotes.css
+++ b/express/code/blocks/quotes/quotes.css
@@ -179,7 +179,7 @@
   justify-content: center;
 }
 
-.quotes .quote .author .image {
+.quotes .quote .author-content .image {
   padding-right: 10px;
 }
 
